add twitter and facebook php pages

--- a/index.jade
+++ b/index.jade
@@ -75,7 +75,7 @@ block content
 			.social-stream-wrap
 				#social-stream
 block scripts
-	script(src="http://cdnjs.cloudflare.com/ajax/libs/jquery.cycle2/20140415/jquery.cycle2.min.js")
+	script(src="//cdnjs.cloudflare.com/ajax/libs/jquery.cycle2/20140415/jquery.cycle2.min.js")
 	script(src='js/jquery.social.stream.1.5.9.min.js')
 	script(src='js/jquery.social.stream.wall.1.6.js')
 	script(src='js/home.js')
