--- a/inc.layout.jade
+++ b/inc.layout.jade
@@ -12,7 +12,7 @@ html
 
 		include inc.footer.jade
 
-		script(src="http://cdnjs.cloudflare.com/ajax/libs/jquery/1.9.0/jquery.min.js")
+		script(src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.9.0/jquery.min.js")
 		script(src="js/global.js")
 
 		block scripts
