adjust the logo

--- a/styles/nav.styl
+++ b/styles/nav.styl
@@ -1,9 +1,10 @@
 .logo
-	image   '../img/logo.png' 265px 52px
-	width   265px
-	height  52px
-	display block
-	float   left
+	image             '../img/logo.png' 265px 52px
+	width             265px
+	height            52px
+	display           block
+	float             left
+	background-repeat no-repeat
 
 .fbar-wrap
 	float      right
