--- a/styles/base.styl
+++ b/styles/base.styl
@@ -41,7 +41,7 @@ h2
 	box-shadow inset 0 1px 3px rgba(48, 48, 48, 0.82)
 
 .bg-slideshow
-	background linear-gradient(to right, #eef8ff 0%, #eef8ff 30%, #d4ebfa 50%, #4ca9e2 50%, #4ca9e2 100%)
+	background linear-gradient(to right, #eef8ff 0%, #e4f5fe 30%, #e3f4fe 50%, #4ca9e2 50%, #4ca9e2 100%)
 
 .bg-footer
 	background linear-gradient(#0b2e42, #053d61)
