--- a/subpages/newsroom.jade
+++ b/subpages/newsroom.jade
@@ -7,8 +7,17 @@ block content
 				p.crumb
 					<a href='/'>Home</a> &gt; Newsroom
 
-			p Welcome to JC&amp;Company&rsquo;s Newsroom where you will find a variety of resources to keep you up-to-date on firm happening. In our Newsroom, you will find the current news releases we bring here and create with an insightful analysis.
-			p.last-of-page If you want to stay connected with JC&amp;Company in other ways, we encourage you to "LIKE" our Facebook page, follow JC&amp;Company in LinkedIn page and follow our Twitter. We hope to see you out there.
+			p Welcome to JC&amp;Company&rsquo;s Newsroom where you will find a variety of resources to keep you up-to-date on firm happening. In our Newsroom, you will find the current news releases we bring here and create with an insightful analysis. 
+			p If you want to stay connected with JC&amp;Company in other ways, we encourage you to "LIKE" our Facebook page, follow JC&amp;Company in LinkedIn page and follow our Twitter. We hope to see you out there!			 
+			p.last-of-page
+				a(href='https://www.facebook.com/jclawcpa', target="_blank")
+					img(src="img/newsroom/facebook.png")
+				a(href='https://twitter.com/JC_LawCPA', target="_blank")
+					img(src="img/newsroom/twitter.png")
+				a(href='https://www.youtube.com/channel/UC2A6gNuULMFPd107sGowphg', target="_blank")
+					img(src="img/newsroom/youtube.png")
+				a(href='https://www.linkedin.com/company/2008056', target="_blank")
+					img(src="img/newsroom/linkedin.png")
 
 			#news-body
 
