--- a/subpages/what-we-do-assurance.jade
+++ b/subpages/what-we-do-assurance.jade
@@ -13,6 +13,7 @@ block content
 				a(href="what-we-do-law.html") Law
 				a(href="what-we-do-asian.html") Asian Practice
 				a(href="what-we-do-startup.html") Startup Consulting
+				a(href="what-we-do-wealth.html") JC Wealth Management
 
 			.subpage-intro
 				p When it comes to Auditing and Assurance services, we not only ask the right questions but also seek to find the right answers you need to your most pressing concerns.
