--- a/subpages/what-we-do-law.jade
+++ b/subpages/what-we-do-law.jade
@@ -13,6 +13,7 @@ block content
 				a.active(href="what-we-do-law.html") Law
 				a(href="what-we-do-asian.html") Asian Practice
 				a(href="what-we-do-startup.html") Startup Consulting
+				a(href="what-we-do-wealth.html") JC Wealth Management
 
 			.subpage-intro
 				p With a professional base of Attorneys and CPAs and some with dual qualifications to handle cross-over issues, we provide a range of legal advice in Tax Litigation, Estate Planning, and Business.
