--- a/subpages/what-we-do-startup.jade
+++ b/subpages/what-we-do-startup.jade
@@ -13,6 +13,7 @@ block content
 				a(href="what-we-do-law.html") Law
 				a(href="what-we-do-asian.html") Asian Practice
 				a.active(href="what-we-do-startup.html") Startup Consulting
+				a(href="what-we-do-wealth.html") JC Wealth Management
 
 			.subpage-intro
 				p We are committed to understanding startups and the community, and we focus on building a long-term relationship with each startup and taking each step to help our entrepreneurs create a successful startup in the U.S.
