--- a/subpages/what-we-do-asian.jade
+++ b/subpages/what-we-do-asian.jade
@@ -13,6 +13,7 @@ block content
 				a(href="what-we-do-law.html") Law
 				a.active(href="what-we-do-asian.html") Asian Practice
 				a(href="what-we-do-startup.html") Startup Consulting
+				a(href="what-we-do-wealth.html") JC Wealth Management
 
 			.subpage-intro
 				p Throughout the global marketplace, Asian companies are seeking ways to address emerging trends and manage risk driven by economic uncertainty, and this can be especially challenging for Asian companies in the United States.
