--- a/subpages/what-we-do-tax.jade
+++ b/subpages/what-we-do-tax.jade
@@ -13,6 +13,7 @@ block content
 				a(href="what-we-do-law.html") Law
 				a(href="what-we-do-asian.html") Asian Practice
 				a(href="what-we-do-startup.html") Startup Consulting
+				a(href="what-we-do-wealth.html") JC Wealth Management
 
 			.subpage-intro
 				p Through a forward thinking multidisciplinary approach and deep industry knowledge, we help you comply with increasingly complex tax regulations, and help optimize their impact on your business.
