--- a/subpages/contact-us.jade
+++ b/subpages/contact-us.jade
@@ -140,6 +140,7 @@ block content
 
 
 block scripts
+	script(src='js/contact.js')
 	script.
 		$(function(){
 			$('.nav').find('.link-contact-us').addClass('active');
