--- a/styles/social-wall.styl
+++ b/styles/social-wall.styl
@@ -48,7 +48,7 @@
 	-webkit-box-shadow: 0 1px 2px rgba(0,0,0,0.5);
 	-moz-box-shadow: 0 1px 2px rgba(0,0,0,0.5);
     box-shadow: 0 1px 2px rgba(0,0,0,0.5);
-    font-size: 11px;
+    font-size: 12px;
     padding: 15px 0 35px 0;
     width: 224px;
 	position: relative;
@@ -56,6 +56,7 @@
 	font-family: Arial, sans-serif;
 	line-height: 1.35em;
 }
+#social-stream li{height:240px}
 .stream li .inner {
 	overflow: hidden;
 	padding: 0 15px;
@@ -95,7 +96,8 @@
 	margin-bottom: 3px;
 }
 .stream li .section-title a {
-	color: #555;
+	color: #d15c09;
+	font-size:14px;
 }
 .stream li .section-title a:hover {
 	color: #2DB6E8;
@@ -473,20 +475,21 @@
 .stream li.dcsns-twitter .twitter-user {
 	margin-bottom: 2px;
 	display: block;
+	font-size:14px;
 }
 .stream li.dcsns-twitter .twitter-user a {
-	color: #999;
+	color: #d15c09;
 	line-height: 1.35em;
 }
 .stream li.dcsns-twitter .twitter-user a:hover {
-	color: #999;
-	text-decoration: none;
+	color: #d15c09;
+	text-decoration: underline;
 }
 .stream li.dcsns-twitter .twitter-user a strong{
-	color: #444;
+	color: #d15c09;
 }
 .stream li.dcsns-twitter .twitter-user a:hover strong {
-	color: #38AEAE;
+	color: #d15c09;
 	text-decoration: underline;
 }
 /* google */
