Add favicon and other changes

--- a/inc.nav.jade
+++ b/inc.nav.jade
@@ -4,8 +4,8 @@
 		.fbar-wrap
 			.fbar-nav
 				.fbar-text IRS Amnesty Program - Never reported a foreign account?
-				.fbar-text JC &amp; Company represents dozens of taxpayers who are voluntarily disclosing over $100 million in foreign bank accounts and assets to the IRS
-				.fbar-text To learn more about JC &amp; Company's FBAR ㅣ FATCA services, visit our website at <a href="/fbar">jclawcpa.com/fbar</a>
+				.fbar-text JC&amp;Company represents dozens of taxpayers who are voluntarily disclosing over $100 million in foreign bank accounts and assets to the IRS
+				.fbar-text To learn more about JC&amp;Company's FBAR l FATCA services, visit our website at <a href="/fbar">jclawcpa.com/fbar</a>
 			a(href='/fbar').logo-fbar
 				span FBAR
 				span FATCA
