--- a/styles/base.styl
+++ b/styles/base.styl
@@ -36,6 +36,9 @@ p + h3
 	
 .last-of-page a img
 	margin-right 10px
+	margin-bottom 30px
+	margin-top 10px
+	float right
 
 blockquote
 	padding-left  20px
