--- a/subpages/who-we-are-overview.jade
+++ b/subpages/who-we-are-overview.jade
@@ -29,6 +29,7 @@ block content
 
 			p.quote As a trusted advisor, we turn knowledge into value for the benefit of our clients, our people, communities and the markets.
 			p.attr John Chung, President and Chief Executive Officer, JC&amp;Company LLP
+			p.last-of-page
 block scripts
 	script.
 		$(function(){
