--- a/inc.layout.jade
+++ b/inc.layout.jade
@@ -1,8 +1,9 @@
 doctype
 html
 	head
-		title JC &amp; Company
+		title JC&amp;Company
 		link(href="http://fonts.googleapis.com/css?family=Noto+Sans:400,700", rel='stylesheet')
+		link(href='img/favicon.ico', rel='icon', type='image/x-icon')
 		link(href='css/styles.css', rel='stylesheet')
 
 	body
