--- a/subpages/who-we-are-overview.jade
+++ b/subpages/who-we-are-overview.jade
@@ -11,6 +11,7 @@ block content
 				a.active(href="#") Overview
 				a(href='who-we-are-values.html') Our Values
 				a(href='who-we-are-clients.html') Our Clients
+				a(href='who-we-are-testimonials.html') Testimonials
 
 			.subpage-intro
 				p Led by former Big 4 management teams and combined with support from other Big 4 professionals, JC&amp;Company is dedicated to providing its clients with the quality and expertise they would expect from Big 4.
