--- a/subpages/who-we-are-values.jade
+++ b/subpages/who-we-are-values.jade
@@ -11,6 +11,8 @@ block content
 				a(href="who-we-are-overview.html") Overview
 				a.active(href='#') Our Values
 				a(href='who-we-are-clients.html') Our Clients
+				a(href='who-we-are-testimonials.html') Testimonials
+
 
 			.subpage-intro
 				p We help our clients’ business grow in a challenging economy by minimizing risk, minimizing taxes, improving profitability, streamlining internal control, managing technology, and by maximizing opportunities.
