adjust social wall height overflow

--- a/styles/social-wall.styl
+++ b/styles/social-wall.styl
@@ -56,7 +56,7 @@
 	font-family: Arial, sans-serif;
 	line-height: 1.35em;
 }
-#social-stream li{height:240px}
+#social-stream li{height:240px;overflow:hidden}
 .stream li .inner {
 	overflow: hidden;
 	padding: 0 15px;
