comment out testimonials

--- a/subpages/who-we-are-values.jade
+++ b/subpages/who-we-are-values.jade
@@ -11,7 +11,7 @@ block content
 				a(href="who-we-are-overview.html") Overview
 				a.active(href='#') Our Values
 				a(href='who-we-are-clients.html') Our Clients
-				a(href='who-we-are-testimonials.html') Testimonials
+				//- a(href='who-we-are-testimonials.html') Testimonials
 
 
 			.subpage-intro
