Make revisions based on client feedback

--- a/inc.footer.jade
+++ b/inc.footer.jade
@@ -2,8 +2,8 @@
 	.container
 		.footer
 			.footer-left
-				p JC&amp;Company LLP - A full scope audit, tax, and advisory services firm with serious Big 4 experience.<br>&copy; 2015 JC&amp;Company LLP.  All rights reserved.
-				p <strong>Irvine.</strong> 10 Corporate Park, Ste. 210, Irvine CA 92606  |  Phone. 949.553.1110  |  Fax. 949.485.4900<br><strong>Los Angeles.</strong> 4801 Wilshire Blvd. Ste. 306, Los Angeles, CA 90010  |  Phone. 213.293.9110 |  Fax. 213.973.4720<br><strong>Northeast Regional Office.</strong> 1830 Easton Ave. Somerset, NJ 08873
+				p JC&amp;Company - A full scope legal and accounting services firm with in-depth Big 4 experience.<br>&copy; 2015 JC&amp;Company LLP.  All rights reserved.
+				p <strong>Irvine Headquarter.</strong> 10 Corporate Park, Ste. 210, Irvine CA 92606  |  Phone. 949.553.1110  |  Fax. 949.485.4900<br><strong>Los Angeles.</strong> 4801 Wilshire Blvd. Ste. 306, Los Angeles, CA 90010  |  Phone. 213.700.2609 |  Fax. 213.973.4720<br><strong>Northeast Regional Office.</strong> 1830 Easton Ave. Somerset, NJ 08873
 
 			include footer.inc.php
 
