--- a/subpages/what-we-do-assurance.jade
+++ b/subpages/what-we-do-assurance.jade
@@ -13,7 +13,7 @@ block content
 				a(href="what-we-do-law.html") Law
 				a(href="what-we-do-asian.html") Asian Practice
 				a(href="what-we-do-startup.html") Startup Consulting
-				a(href="what-we-do-wealth.html") JC Wealth Management
+				a(href="what-we-do-wealth.html") Wealth Management
 
 			.subpage-intro
 				p When it comes to Auditing and Assurance services, we not only ask the right questions but also seek to find the right answers you need to your most pressing concerns.
@@ -24,26 +24,24 @@ block content
 				.sidebar
 					h4 How we can help
 					ul
-						li Financial Statement Audits &amp; Reviews
-						li Financial Statement Compilations
+						li Financial statement audits &amp; reviews 
 						li SEC registrations and filings
-						li IFRS Conversion and Reporting
-						li Agreed-upon procedures
-						li Employee Benefit Plan Audits
-						li Examination of Asset Based Lending
-						li Sarbanes Oxley Section 404 Compliance
-						li Internal Audits
-						li Review and evaluation of the internal Control Environment
+						li IFRS conversion and reporting
+						li Sarbanes oxley section 404 compliance 
+						li M&amp;A and other transaction advisory services
+						li Financial and tax due diligence 
+						li Business projection and valuations
+						li CFO and controller outsourcing 
 
 
 				.page-content
-					p What makes JC&amp;Company so different? Our audit and assurance services extend far beyond the preparation of financial statements. Our professionals aren’t only studying the newest regulations and analyzing financial data, but they’re out talking and meeting with people to get a better understanding of the various industries in which businesses like yours operate. Because of this knowledge, our people can provide you with reliable, insightful input that allows you to make the best decisions for your organization today and for generations to come.
+					p What makes JC&amp;Company so different? Our audit and assurance services extend far beyond the preparation of financial statements. Our professionals aren&rsquo;t only studying the newest regulations and analyzing financial data, but they&rsquo;re out talking and meeting with people to get a better understanding of the various industries in which businesses like yours operate. Because of our knowledge, our people can provide you with reliable, insightful input that allows you to make the best decisions for your organization today and for generations to come.
 
 
 
 					h3 Commitment to Quality
 
-					p.last-of-page JC&amp;Company is committed to the highest standards of quality and ethics. Our comprehensive system of quality control ensures that consistent high standards are maintained from start to delivery of our audit and assurance services. We constantly monitor the ever-changing factors that affect your business goals, and assist you in developing strategies to help you succeed in today's ever-changing economy.
+					p.last-of-page JC&amp;Company is committed to the highest standards of quality and ethics. Our comprehensive system of quality control ensures that consistent high standards are maintained from start to delivery of our audit and assurance services. We constantly monitor the ever-changing factors that affect your business goals, and assist you in developing strategies to help you succeed in today&rsquo;s ever-changing economy.
 
 block scripts
 	script.
