--- a/subpages/what-we-do-law.jade
+++ b/subpages/what-we-do-law.jade
@@ -13,10 +13,10 @@ block content
 				a.active(href="what-we-do-law.html") Law
 				a(href="what-we-do-asian.html") Asian Practice
 				a(href="what-we-do-startup.html") Startup Consulting
-				a(href="what-we-do-wealth.html") JC Wealth Management
+				a(href="what-we-do-wealth.html") Wealth Management
 
 			.subpage-intro
-				p With a professional base of Attorneys and CPAs and some with dual qualifications to handle cross-over issues, we provide a range of legal advice in Tax Litigation, Estate Planning, and Business.
+				p With a professional base of Attorneys and CPAs and some with dual qualifications to handle cross&ndash;over issues, we provide a range of legal advice in Business, Tax Litigation, and Estate Planning.
 				img(src="img/subpages/law.jpg")
 
 
@@ -42,7 +42,7 @@ block content
 
 				.page-content
 					h3 Trust and Estate Tax Planning
-					p Our trust and estate planning practice concentrates on using innovative planning techniques to fulfill our clients’ dispositive goals and to reduce and eliminate taxes. We assist our clients in planning trusts and estates, conveying the family owned corporations and other business interests to children, making charitable donations, and administering their trusts and estates.
+					p Our trust and estate planning practice concentrates on using innovative planning techniques to fulfill our clients&rsquo; need, goals, and to reduce and eliminate taxes We assist our clients in planning trusts and estates, conveying the family owned corporations and other business interests to children, making charitable donations, and administering their trusts and estates.
 
 			.page-container
 				.sidebar
@@ -52,10 +52,10 @@ block content
 						li Entity Selection and Formation
 						li Business Immigration (H -1B, L-1, E-2, Green Card, etc)
 				.page-content
-					h3 Business and Immigration
-					p A successful business depends largely upon careful preparation and operation of business with appropriate legal advice. We assist our clients on every aspect of their business, ranging from drafting agreements on day-to-day operation to handling their immigration matters.
+					h3 Immigration
+					p A successful business depends largely upon careful preparation and execution of business with appropriate legal advice. We assist our clients on every aspect of their business, ranging from drafting agreements on day&ndash;to&ndash;day operation to handling their immigration matters. 
 
-			p.attr Legal services are provided by JC&amp;Company Law Firm, which is a separate and distinct entity from JC&amp;Company LLP.
+			p.attr Legal services are provided by JC&amp;Company Law Corporation, which is a separate and distinct entity from JC&amp;Company PC.
 
 block scripts
 	script.
