--- a/subpages/what-we-do-startup.jade
+++ b/subpages/what-we-do-startup.jade
@@ -13,7 +13,7 @@ block content
 				a(href="what-we-do-law.html") Law
 				a(href="what-we-do-asian.html") Asian Practice
 				a.active(href="what-we-do-startup.html") Startup Consulting
-				a(href="what-we-do-wealth.html") JC Wealth Management
+				a(href="what-we-do-wealth.html") Wealth Management
 
 			.subpage-intro
 				p We are committed to understanding startups and the community, and we focus on building a long-term relationship with each startup and taking each step to help our entrepreneurs create a successful startup in the U.S.
@@ -26,20 +26,19 @@ block content
 					ul
 						li Startup entity counseling
 						li Startup formation, maintenance and dissolution
-						li Angel/seed round financing
-						li Debt and equity transactions for privately held companies
-						li CFO and Controller Outsourcing
-						li Venture capital financing
+						li Angel/seed round financing contract
+						li Debt and equity transactions for privately-held companies
+						li Venture capital financing contract
 						li Stock compensation and option plans
 						li Joint ventures and strategic partnerships
 
 
 				.page-content
-					p At JC&amp;Company, we provide assistance to companies faced with opportunities for growth such as a merger or acquisition, or critical challenges such as fraud, litigation or reorganization. Our professionals combine technical, market, and business skills that allow them to deliver objective advice and guidance that help the firm's clients grow their businesses, improve their performance, and manage risk more effectively. We serve companies throughout the business lifecycle, helping them in their efforts to emerge stronger and smarter.
+					p At JC&amp;Company, we provide assistance to companies faced with opportunities for growth such as a merger or acquisition, or critical challenges such as fraud, litigation or reorganization. Our professionals combine technical, market, and business skills that allow them to deliver objective advice and guidance that help the firm&rsquo;s clients grow their businesses, improve their performance, and manage risk more effectively. We serve companies throughout the business lifecycle, helping them in their efforts to emerge stronger and smarter.
 
-					h3 We bring deep expertise to our clients
+					h3 We bring deep Startup expertise to our clients
 
-					p At JC&amp;Company, we provide assistance to companies faced with opportunities for growth. We are committed to the growth of the entrepreneurial and startup community. Our attorneys are experienced in the formation of corporate entities to allow for growth, venture capital financing, angel financing, acquisition in the United States. Also, our professionals combine technical, market, and business skills that allow them to deliver objective advice and guidance that help the startup companies improve their performance.
+					p At JC&amp;Company, we provide assistance to companies encountering opportunities for growth such as a merger or acquisition, or critical challenges such as fraud, litigation or reorganization. Our professionals combine technical, market, and business skills that allow them to deliver objective advice and guidance that help the firm&rsquo;s clients grow their businesses, improve their performance, and manage risk more effectively. We serve companies throughout the business lifecycle, helping them in their efforts to emerge stronger and smarter.
 
 					h3 Our Client&rsquo;s Testimonial
 					blockquote
