--- a/subpages/what-we-do-tax.jade
+++ b/subpages/what-we-do-tax.jade
@@ -13,7 +13,7 @@ block content
 				a(href="what-we-do-law.html") Law
 				a(href="what-we-do-asian.html") Asian Practice
 				a(href="what-we-do-startup.html") Startup Consulting
-				a(href="what-we-do-wealth.html") JC Wealth Management
+				a(href="what-we-do-wealth.html") Wealth Management
 
 			.subpage-intro
 				p Through a forward thinking multidisciplinary approach and deep industry knowledge, we help you comply with increasingly complex tax regulations, and help optimize their impact on your business.
@@ -36,23 +36,17 @@ block content
 						li State and Local Taxes
 						li Representation before the IRS and other Tax Authorities
 						li Trust and Estate Tax Planning
-						li
-							a(href='/fbar') FBAR/FATCA
-						li
-							a(href='http://jcwealthmgnt.com') Trust and Estate Tax Planning
-						li
-							a.modal-link(href='#modal-rd') R&amp;D Tax Credit
-						li
-							a.modal-link(href='#modal-enterprise') Enterprise Zone
-						li
-							a.modal-link(href='#modal-other') Other Tax Inventives
+						li FBAR/FATCA
+						li R&amp;D Tax Credit
+						li Enterprise Zone
+						li Other Tax Inventives
 
 				.page-content
-					p At JC&amp;Company, we provide high quality service which emphasizes proactive, creative tax analysis, and year-round tax planning. We are focused on identifying and maximizing clients' federal, state and international tax-saving opportunities. We have a breadth of tax expertise second to none in our target markets, which gives our tax practice a span of focus rarely found servicing middle market companies and their owners. We also serve a variety of personal tax planning and compliance needs for various corporate executives and high net worth individuals.
+					p At JC&amp;Company, we provide high quality services which emphasizes proactive, creative tax analysis, and year-round tax planning. We are focused on identifying and maximizing clients' federal, state and international tax-saving opportunities. We have a wide scope of tax expertise second to none in our target markets, which gives our tax practice a span of focus rarely found servicing middle market companies and their owners. We also serve a variety of personal tax planning and compliance needs for various corporate executives and high net worth individuals.
 
 
 
-					h3 Tax Compliance and Strategy – We Advise and We Plan
+					h3 Tax Compliance and Strategy &ndash; We Advise and We Plan
 
 					p.last-of-page We use our experience and expertise to be proactive business professionals for our clients; an integral part of the company management team. We think strategically, lawfully, and aggressively for improved client performance.
 
