--- a/subpages/what-we-do-wealth.jade
+++ b/subpages/what-we-do-wealth.jade
@@ -13,10 +13,10 @@ block content
 				a(href="what-we-do-law.html") Law
 				a(href="what-we-do-asian.html") Asian Practice
 				a(href="what-we-do-startup.html") Startup Consulting
-				a.active(href="what-we-do-wealth.html") JC Wealth Management
+				a.active(href="what-we-do-wealth.html") Wealth Management
 
 			.subpage-intro
-				p JC Wealth Management helps our clients work towards and maintain financial prosperity by Implementing strategies that seek to maximize the growth, preservation, and tax-efficient transfer of corporate and personal wealth. 
+				p Wealth management service helps our clients work towards and maintain financial prosperity by implementing strategies that seek to maximize the growth, preservation, and tax-efficient transfer of corporate and personal wealth. 
 				img(src="img/subpages/wealth-mnt.jpg")
 
 
@@ -35,11 +35,11 @@ block content
 
 
 				.page-content
-					p We are committed to maintaining the highest standards of integrity and professionalism and seek to provide our clients with excellent service and results. Our licensed wealth advisor will utilize a holistic financial approach by reviewing your wealth management issues with each client. This approach can help you take charge of your finances through a comprehensive plan.
+					p We are committed to maintaining the highest standards of integrity and professionalism and seek to provide our clients with excellent service and results. Our licensed wealth advisor will utilize a holistic financial approach by reviewing your wealth management positions. This approach can help you take charge of your finances through a comprehensive plan. Our mission is to deliver objective and honest advice to our clients and serve as their family wealth guardians. As a financial caretaker, we foster interaction and engagement with all of our client family members who seek to secure their wealth for generations.
 
 					h3 We are a global network of bilingual professionals
 
-					p.last-of-page Our professionals are dedicated to providing personalized service for our Asian clients around the world. We are made up of experienced men and women with in-depth knowledge of both the Americas and Asian corporate environments, gained through hands-on experience of serving major clients. With substantial experience with many reputable Asian companies, JC&amp;Company's professionals understand the relationships between U.S. operations, foreign parent companies, and global affiliates, and can provide a broad range of Audit, Tax and Advisory services to Asian companies operating in the U.S.
+					p.last-of-page Our professionals are dedicated to providing personalized service for our Asian clients around the world. We are made up of experienced men and women with in-depth knowledge of both the Americas and Asian corporate environments, gained through hands-on experience of serving major clients. With substantial experience with many reputable Asian companies, JC&amp;Company&rsquo;s professionals understand the relationships between U.S. operations, foreign parent companies, and global affiliates, and can provide a broad range of Audit, Tax and Advisory services to Asian companies operating in the U.S.
 
 block scripts
 	script.
