--- a/subpages/who-we-are-clients.jade
+++ b/subpages/who-we-are-clients.jade
@@ -11,7 +11,7 @@ block content
 				a(href="who-we-are-overview.html") Overview
 				a(href='who-we-are-values.html') Our Values
 				a.active(href='#') Our Clients
-				//- a(href='who-we-are-testimonials.html') Testimonials
+				a(href='who-we-are-testimonials.html') Testimonials
 
 
 			//- .subpage-intro
