--- a/subpages/who-we-are-overview.jade
+++ b/subpages/who-we-are-overview.jade
@@ -11,24 +11,27 @@ block content
 				a.active(href="#") Overview
 				a(href='who-we-are-values.html') Our Values
 				a(href='who-we-are-clients.html') Our Clients
-				//- a(href='who-we-are-testimonials.html') Testimonials
+				a(href='who-we-are-testimonials.html') Testimonials
 
 			.subpage-intro
 				p Led by former Big 4 management teams and combined with support from other Big 4 professionals, JC&amp;Company is dedicated to providing its clients with the quality and expertise they would expect from Big 4.
 				img(src="img/subpages/soil.jpg")
 
 
-			p JC&amp;Company LLP is a professional firm committed to serving the needs of our clients. Our team of dedicated CPA and Attorneys has an intricate understanding of the complexities of your business needs.
+			p JC&amp;Company LLP is a professional firm committed to serving the needs of our clients. Our team of dedicated CPAs and Attorneys have an intricate understanding of the complexities of your business needs.
 
 			p Since 2009, we have worked with individuals and corporations including publicly traded companies as well as a wide range of privately held companies. Through our network of offices across the country and overseas, and our collective resources and expertise, we have been providing excellent and individually tailored service to our wide range of clients.
 
-			p The scope of our involvement with our clients does not just extend to issues that may arise during the course of complex and global business transactions. It extends to day-to-day affairs where we counsel clients on business and legal needs on a microscopic level. Our clients have come to rely upon our seamless service and know that they can contact our firm day or night for customized solutions to any problem.
+			p The scope of our involvement with our clients does not just extend to issues that may arise during the course of complex and global business transactions; it extends to day-to-day affairs where we counsel clients on business and legal needs on a microscopic level. Our clients have come to rely upon our seamless service and know that they can contact our firm day or night for customized solutions to any problem.
 
 			h3 Big 4 Quality Service with Affordable Professional Cost
 
-			p A professional firm is known for the quality of its service. We are professionals seriously trained as core members of the management team in U.S. Big 4 Firms for over 20 years. We make certain the quality of our services at Big 4 standard, but at a fee structure comparable to that of a non-Big 4 practices.
+			p A professional firm is known for the quality of its service. We are professionals seriously trained as core members of the management team in the U.S. Big 4 Firms for over 20 years. We make certain that the quality of our services at Big 4 are reasonable, and at a fee of a non-Big 4 practices.
 
-			p.quote As a trusted advisor, we turn knowledge into value for the benefit of our clients, our people, communities and the markets.
+
+
+
+			p.quote As trusted advisors, we turn knowledge into value for the benefit of our clients, our people, communities.
 			p.attr John Chung, President and Chief Executive Officer, JC&amp;Company LLP
 			p.last-of-page
 block scripts
