--- a/subpages/who-we-are-values.jade
+++ b/subpages/who-we-are-values.jade
@@ -11,21 +11,22 @@ block content
 				a(href="who-we-are-overview.html") Overview
 				a.active(href='#') Our Values
 				a(href='who-we-are-clients.html') Our Clients
-				//- a(href='who-we-are-testimonials.html') Testimonials
+				a(href='who-we-are-testimonials.html') Testimonials
 
 
 			.subpage-intro
-				p We help our clients’ business grow in a challenging economy by minimizing risk, minimizing taxes, improving profitability, streamlining internal control, managing technology, and by maximizing opportunities.
+				p We help our clients&rsquo; business grow in a challenging economy by minimizing risk, minimizing taxes, improving profitability, streamlining internal control, managing technology, and maximizing opportunities.
 				img(src="img/subpages/handshake.jpg")
 
 
-			p We care about the success of our clients. We are committed to providing every client with exceptional services that advance their business needs and add value to their company. Some firms blindly give every client the same systematic advice. We are different. We endeavor to understand the intricacies of our clients' business and tailor our services to meet their specific needs. We partner with our clients in their business enterprise and walk the journey with them.
+			p We care about the success of our clients. We are committed to providing every client with exceptional services that advance their business needs and add value to their company. Some firms blindly give every client the same systematic advice, we are different. We endeavor to understand the intricacies of our clients' business and tailor our services to meet their specific needs. We partner with our clients in their business enterprise and walk the journey with them.
 
 			h3 JC&amp;Company&rsquo;s Standards and Ethics
 
-			p The continuing success of JC&amp;Company depends upon the adherence to the high standards of professional conduct, performance and service. These standards must be embraced by all members of the firm as the way we live our values. A primary responsibility of the firm is to observe the standards of professional conduct in practice. JC&amp;Company places a strong emphasis on personal integrity and everyone in the firm, regardless of their title or position, is obligated to uphold the ideals of professionalism.
+			p JC&amp;Company places a strong emphasis on personal integrity and everyone in the firm, regardless of their title or position, is obligated to uphold the ideals of professionalism. A primary responsibility of the firm is to observe the standards of professional conduct in practice.
+			p By setting high standards for ourselves, and our clients, our commitment to upholding JC&amp;Company&rsquo;s values is clear: There is never a situation when compromising our standards is either expected or acceptable and we always align our culture of integrity with our values, words, and actions.
 
-			p.last-of-page By setting high standards for ourselves, and our clients, our commitment to upholding JC&amp;Company's values is clear: There is never a situation when compromising our standards is either expected or acceptable and we always align our culture of integrity with our values, words, and actions.
+			p.last-of-page By setting high standards for ourselves, and our clients, our commitment to upholding JC&amp;Company&rsquo;s values is clear: There is never a situation when compromising our standards is either expected or acceptable and we always align our culture of integrity with our values, words, and actions.
 
 block scripts
 	script.
