updated testimonial and client

--- a/subpages/who-we-are-clients.jade
+++ b/subpages/who-we-are-clients.jade
@@ -20,41 +20,48 @@ block content
 
 
 			.image-list
-				img(src='img/clients/01_lg_display.png', alt='')
-				img(src='img/clients/02_LG-International-logo.png', alt='')
-				img(src='img/clients/03_Woori-Bank.png', alt='')
-				img(src='img/clients/04_keb.png', alt='')
-				img(src='img/clients/05_saehan_logo.png', alt='')
-				img(src='img/clients/06_SK_Hynix_logo.png', alt='')
-				img(src='img/clients/07_Openbank_logo.png', alt='')
-				img(src='img/clients/08_SK_Telecom_Logo.png', alt='')
-				img(src='img/clients/09_skecBig.png', alt='')
-				img(src='img/clients/11_hanwha.png', alt='')
-				img(src='img/clients/12_Hanwha_Q_CELLS_Logo.png', alt='')
-				img(src='img/clients/13_Hanwha_CI.png', alt='')
-				img(src='img/clients/14_sgi_holdings.png', alt='')
-				img(src='img/clients/15_afreecatv.png', alt='')
-				img(src='img/clients/16_teamblind.png', alt='')
-				img(src='img/clients/17_kt_capital.png', alt='')
-				img(src='img/clients/18_Hanjin_logo.png', alt='')
-				img(src='img/clients/19_aif_logo.png', alt='')
-				img(src='img/clients/20_food_20131004b_eng.png', alt='')
-				img(src='img/clients/21_tous_logo.png', alt='')
-				img(src='img/clients/22_paris1.png', alt='')
-				img(src='img/clients/23_coupang-logo.png', alt='')
-				img(src='img/clients/24_LOTTE.png', alt='')
-				img(src='img/clients/25_logo_palmco.png', alt='')
-				img(src='img/clients/26_Logo_DeWind_rgb_freigestellt.png', alt='')
-				img(src='img/clients/28_Neowiz-1.png', alt='')
-				img(src='img/clients/29_LiquidmetalTechnologies.png', alt='')
-				img(src='img/clients/30_Poongsan.png', alt='')
-				img(src='img/clients/31_Cap-America-logo-rgb.png', alt='')
-				img(src='img/clients/32_Kotra_logo.png', alt='')
-				img(src='img/clients/33_sbs_logo.png', alt='')
-				img(src='img/clients/34_neoflam.png', alt='')
-				img(src='img/clients/36_KITA.png', alt='')
-				img(src='img/clients/37_logo.png', alt='')
-				img(src='img/clients/38_logo_onescreen.png', alt='')
+				img(src='img/clients/01.png', alt='')
+				img(src='img/clients/02.png', alt='')
+				img(src='img/clients/03.png', alt='')
+				img(src='img/clients/04.png', alt='')
+				img(src='img/clients/05.png', alt='')
+				img(src='img/clients/06.png', alt='')
+				img(src='img/clients/07.png', alt='')
+				img(src='img/clients/08.png', alt='')
+				img(src='img/clients/09.png', alt='')
+				img(src='img/clients/11.png', alt='')
+				img(src='img/clients/12.png', alt='')
+				img(src='img/clients/13.png', alt='')
+				img(src='img/clients/14.png', alt='')
+				img(src='img/clients/15.png', alt='')
+				img(src='img/clients/16.png', alt='')
+				img(src='img/clients/17.png', alt='')
+				img(src='img/clients/18.png', alt='')
+				img(src='img/clients/19.png', alt='')
+				img(src='img/clients/20.png', alt='')
+				img(src='img/clients/21.png', alt='')
+				img(src='img/clients/22.png', alt='')
+				img(src='img/clients/23.png', alt='')
+				img(src='img/clients/24.png', alt='')
+				img(src='img/clients/25.png', alt='')
+				img(src='img/clients/26.png', alt='')
+				img(src='img/clients/28.png', alt='')
+				img(src='img/clients/29.png', alt='')
+				img(src='img/clients/30.png', alt='')
+				img(src='img/clients/31.png', alt='')
+				img(src='img/clients/32.png', alt='')
+				img(src='img/clients/33.png', alt='')
+				img(src='img/clients/34.png', alt='')
+				img(src='img/clients/36.png', alt='')
+				img(src='img/clients/37.png', alt='')
+				img(src='img/clients/38.png', alt='')
+				img(src='img/clients/39.png', alt='')
+				img(src='img/clients/40.png', alt='')
+				img(src='img/clients/41.png', alt='')
+				img(src='img/clients/42.png', alt='')
+				img(src='img/clients/43.png', alt='')
+				img(src='img/clients/44.png', alt='')
+				img(src='img/clients/45.png', alt='')
 
 block scripts
 	script.
